website: RU - sync ru/releng pages
Reviewed by: andy, marck
Differential Revision: https://reviews.freebsd.org/D53883

--- a/website/content/ru/releng/_index.adoc
+++ b/website/content/ru/releng/_index.adoc
@@ -6,116 +6,111 @@ sidenav: developers
 include::shared/authors.adoc[]
 include::shared/ru/urls.adoc[]
 
-:contact-re: re@FreeBSD.org
-:contact-so: security-officer@FreeBSD.org
-:contact-portmgr: portmgr@FreeBSD.org
-:contact-doc: freebsd-doc@FreeBSD.org
-
 = Информация о подготовке релизов
 
 На этой странице находится информация о процессе подготовки релизов FreeBSD.
 
+* <<schedule,Расписание предстоящих релизов>>
 * <<freeze,Состояние заморозки кода>>
 * link:charter[Обязанности участников Группы подготовки релизов]
 * <<docs,Документация по подготовке релизов>>
 * <<team,Команда подготовки текущего релиза>>
 * <<old,Старые релизы>>
 
+////
+General information about committing to -STABLE.
+////
+
 [[schedule]]
 == График предстоящих релизов
 
-ПРИМЕЧАНИЕ: Даты предстоящих релизов даны приблизительно и могут изменяться по ходу работ.
+//Note: Release dates are approximate and may be subject to schedule slippage.
+
+//As of 2024-06-04, the next release has not yet been announced.
 
 [.tblbasic]
 [cols=",,",options="header",]
 |===
 |Дата |Событие |Информация
-|октябрь 2014 |FreeBSD 10.1 |link:https://www.FreeBSD.org/releases/10.1R/schedule.html[Расписание выпуска]
+|Декабрь 2025 |FreeBSD 15.0 |link:../../releases/15.0R/schedule/[График выпуска]
+|Март 2026 |FreeBSD 14.4 |link:../../releases/14.4R/schedule/[График выпуска]
+|Июнь 2026 |FreeBSD 15.1 |
+|Сентябрь 2026 |FreeBSD 14.5 |
+|Декабрь 2026 |FreeBSD 15.2 |
+|Март 2027 |FreeBSD 14.6 |
+|Июнь 2027 |FreeBSD 15.3 |
+|Декабрь 2027 |FreeBSD 16.0 |
 |===
 
 [[freeze]]
 == Состояние заморозки кода
 
-В следующей таблице дано состояние заморозки кода для основных веток поддерева `src/` CVS-хранилища FreeBSD. Все изменения в любую из веток, помеченных как "заморожено", сначала должны быть просмотрены и подтверждены соответствующей контактной персоной. Состояния других поддеревьев, таких как `ports/` и `doc/`, также даны ниже.
+В следующей таблице дано состояние заморозки кода для основных веток поддерева `src/` репозитория FreeBSD. Все изменения, вносимые в любую из веток, помеченных как "заморожено", сначала должны быть просмотрены и подтверждены соответствующим ответственным лицом. Состояния других поддеревьев, таких как `ports/` и `doc/`, также даны ниже.
 
 [.tblbasic]
-[cols=",,,",options="header",]
+[cols="1,1,2,4",options="header",]
 |===
-|Ветка |Состояние |Контакт |Замечания
-|`head` |Открыта |разработчики |Активная ветка разработки 11-CURRENT.
-|`stable/10` |Открыта |разработчики |Ветка разработки 10-STABLE.
-|`releng/10.0` |Заморожена |{contact-so} |Поддерживаемая ветка для исправления ошибок FreeBSD 10.0.
-|`stable/9` |Открыта |разработчики |Ветка разработки 9-STABLE.
-|`releng/9.3` |Заморожена |{contact-re} |Поддерживаемая ветка для исправления ошибок FreeBSD 9.3.
-|`releng/9.2` |Заморожена |{contact-so} |Поддерживаемая ветка для исправления ошибок FreeBSD 9.2.
-|`releng/9.1` |Заморожена |{contact-so} |Поддерживаемая ветка для исправления ошибок FreeBSD 9.1.
-|`releng/9.0` |Заморожена |{contact-so} |Ветка для исправления ошибок FreeBSD 9.0 (официально не поддерживается).
-|`stable/8` |Открыта |разработчики |Ветка разработки 8-STABLE.
-|`releng/8.4` |Заморожена |{contact-so} |Поддерживаемая ветка для исправления ошибок FreeBSD 8.4.
-|`releng/8.3` |Заморожена |{contact-so} |Ветка для исправления ошибок FreeBSD 8.3 (официально не поддерживается).
-|`releng/8.2` |Заморожена |{contact-so} |Ветка для исправления ошибок FreeBSD 8.2 (официально не поддерживается).
-|`releng/8.1` |Заморожена |{contact-so} |Ветка для исправления ошибок FreeBSD 8.1 (официально не поддерживается).
-|`releng/8.0` |Заморожена |{contact-so} |Ветка для исправления ошибок FreeBSD 8.0 (официально не поддерживается).
-|`stable/7` |Открыта |разработчики |Ветка сопровождения 7-STABLE (официально не поддерживается).
-|`releng/7.4` |Заморожена |{contact-so} |Ветка для исправления ошибок FreeBSD 7.4 (официально не поддерживается).
-|`releng/7.3` |Заморожена |{contact-so} |Ветка для исправления ошибок FreeBSD 7.3 (официально не поддерживается).
-|`releng/7.2` |Заморожена |{contact-so} |Ветка для исправления ошибок FreeBSD 7.2 (официально не поддерживается).
-|`releng/7.1` |Заморожена |{contact-so} |Ветка для исправления ошибок FreeBSD 7.1 (официально не поддерживается).
-|`releng/7.0` |Заморожена |{contact-so} |Ветка для исправления ошибок FreeBSD 7.0 (официально не поддерживается).
-|`stable/6` |Открыта |разработчики |Ветка сопровождения 6-STABLE (официально не поддерживается).
-|`releng/6.4` |Заморожена |{contact-so} |Ветка для исправления ошибок FreeBSD 6.4 (официально не поддерживается).
-|`releng/6.3` |Заморожена |{contact-so} |Ветка для исправления ошибок FreeBSD 6.3 (официально не поддерживается).
-|`releng/6.2` |Заморожена |{contact-so} |Ветка для исправления ошибок FreeBSD 6.2 (официально не поддерживается).
-|`releng/6.1` |Заморожена |{contact-so} |Ветка для исправления ошибок FreeBSD 6.1 (официально не поддерживается).
-|`releng/6.0` |Заморожена |{contact-so} |Ветка для исправления ошибок FreeBSD 6.0 (официально не поддерживается).
-|`stable/5` |Открыта |разработчики |Ветка для поддержки 5-STABLE (официально не поддерживается).
-|`releng/5.5` |Заморожена |{contact-so} |Ветка для исправления ошибок FreeBSD 5.5 (официально не поддерживается).
-|`releng/5.4` |Заморожена |{contact-so} |Ветка для исправления ошибок FreeBSD 5.4 (официально не поддерживается).
-|`releng/5.3` |Заморожена |{contact-so} |Ветка для исправления ошибок FreeBSD 5.3 (официально не поддерживается).
-|`releng/5.2` |Заморожена |{contact-so} |Ветка FreeBSD 5.2 / 5.2.1 для исправлений, касающихся безопасности (официально не поддерживается).
-|`releng/5.1` |Заморожена |{contact-so} |Ветка FreeBSD 5.1 для исправлений, касающихся безопасности (официально не поддерживается).
-|`releng/5.0` |Заморожена |{contact-so} |Ветка FreeBSD 5.0 для исправлений, касающихся безопасности (официально не поддерживается).
-|`stable/4` |Открыта |разработчики |Ветка для поддержки 4-STABLE (официально не поддерживается).
-|`releng/4.11` |Заморожена |{contact-so} |Ветка для исправления ошибок FreeBSD 4.11 (официально не поддерживается).
-|`releng/4.10` |Заморожена |{contact-so} |Ветка FreeBSD 4.10 для исправлений, касающихся безопасности (официально не поддерживается).
-|`releng/4.9` |Заморожена |{contact-so} |Ветка FreeBSD 4.9 для исправлений, касающихся безопасности (официально не поддерживается).
-|`releng/4.8` |Заморожена |{contact-so} |Ветка FreeBSD 4.8 для исправлений, касающихся безопасности (официально не поддерживается).
-|`releng/4.7` |Заморожена |{contact-so} |Ветка FreeBSD 4.7 для исправлений, касающихся безопасности (официально не поддерживается).
-|`releng/4.6` |Заморожена |{contact-so} |Ветка FreeBSD 4.6 для исправлений, касающихся безопасности (официально не поддерживается).
-|`releng/4.5` |Заморожена |{contact-so} |Ветка FreeBSD 4.5 для исправлений, касающихся безопасности (официально не поддерживается).
-|`releng/4.4` |Заморожена |{contact-so} |Ветка FreeBSD 4.4 для исправлений, касающихся безопасности (официально не поддерживается).
-|`releng/4.3` |Заморожена |{contact-so} |Ветка FreeBSD 4.3 для исправлений, касающихся безопасности (официально не поддерживается).
-|`stable/3` |Открыта |разработчики |Ветка для поддержки 3-STABLE (официально не поддерживается).
-|`stable/2.2` |Открыта |разработчики |Ветка для поддержки 2.2-STABLE (официально не поддерживается).
-|Поддерево |Состояние |Контакт |Примечания
-|`ports/` |Открыто |{contact-portmgr} |Коллекция Портов FreeBSD.
-|`doc/` |Открыто |{contact-doc} |Набор документации на основе SGML/XML.
+|Ветка |Статус |Контакт |Примечания
+|`main` |Открыта |committers |Ветка активной разработки для 16.0-CURRENT.
+|`stable/15` |Открыта |committers |Ветка разработки для FreeBSD 15-STABLE.
+|`releng/15.0` |Заморожена |re@FreeBSD.org |Поддерживаемая ветка для исправления ошибок FreeBSD 15.0.
+|`stable/14` |Открыта |committers |Ветка разработки для FreeBSD 14-STABLE.
+|`releng/14.3` |Заморожена |security-officer@FreeBSD.org |Поддерживаемая ветка для исправления ошибок FreeBSD 14.3.
+|`releng/14.2` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 14.2 (официально не поддерживается).
+|`releng/14.1` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 14.1 (официально не поддерживается).
+|`releng/14.0` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 14.0 (официально не поддерживается).
+|`stable/13` |Открыта |committers |Ветка разработки для FreeBSD 13-STABLE.
+|`releng/13.5` |Заморожена |security-officer@FreeBSD.org |Поддерживаемая ветка для исправления ошибок FreeBSD 13.5.
+|`releng/13.4` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 13.4 (официально не поддерживается).
+|`releng/13.3` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 13.3 (официально не поддерживается).
+|`releng/13.2` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 13.2 (официально не поддерживается).
+|`releng/13.1` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 13.1 (официально не поддерживается).
+|`releng/13.0` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 13.0 (официально не поддерживается).
+|`stable/12` |Открыта |committers |Ветка сопровождения для FreeBSD 12-STABLE (официально не поддерживается).
+|`releng/12.4` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 12.4 (официально не поддерживается).
+|`releng/12.3` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 12.3 (официально не поддерживается).
+|`releng/12.2` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 12.2 (официально не поддерживается).
+|`releng/12.1` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 12.1 (официально не поддерживается).
+|`releng/12.0` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 12.0 (официально не поддерживается).
+|`stable/11` |Открыта |committers |Ветка сопровождения для FreeBSD 11-STABLE (официально не поддерживается).
+|`releng/11.4` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 11.4 (официально не поддерживается).
+|`releng/11.3` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 11.3 (официально не поддерживается).
+|`releng/11.2` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 11.2 (официально не поддерживается).
+|`releng/11.1` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 11.1 (официально не поддерживается).
+|`releng/11.0` |Заморожена |security-officer@FreeBSD.org |Ветка для исправления ошибок FreeBSD 11.0 (официально не поддерживается).
+|*Репозиторий* |*Статус* |*Контакт* |*Примечания*
+|`ports/` |Открыт |portmgr@FreeBSD.org |Коллекция портов FreeBSD.
+|`doc/` |Открыт |freebsd-doc@FreeBSD.org |Документация на основе AsciiDoc.
 |===
+
+(Ветки, соответствующие FreeBSD 10.x и более ранним версиям, представляют только исторический интерес и исключены из приведённой выше таблицы.)
 
 [[docs]]
 == Документация по подготовке релизов
 
-* link:{releng}[Подготовка релизов FreeBSD] +
+* link:{freebsd-releng}[Подготовка релизов FreeBSD] +
 Описывает подход, используемый командой подготовки релизов FreeBSD для создания релизов, качество которых соответствует готовности к промышленной эксплуатации операционной системы FreeBSD. В этом документе рассказано об инструментах, доступных тому, кто заинтересован в создании собственных релизов FreeBSD для использования в корпоративной среде или в коммерческих целях.
 
 [[team]]
 == Команда подготовки релизов
 
-Основная группа подготовки релизов отвечает за подтверждение запросов link:{handbook}#MFC-GLOSSARY[MFC] в периоды замораживания кода, создание планов выпуска и остальные работы, описанные в наших link:charter[обязанностях].
+Основная группа подготовки релизов отвечает за подтверждение запросов link:{handbook}glossary/#mfc-glossary[MFC] в периоды замораживания кода, создание планов выпуска и остальные работы, описанные в наших link:charter[обязанностях].
 
-*Основная группа подготовки релизов (Primary RE Team) re@FreeBSD.org)* : {re-members} формирует основную группу подготовки, принимающую решения.
+*Основная группа подготовки релизов (re@FreeBSD.org)* : {re-members} формирует основную группу подготовки, принимающую решения.
 
-Группа построения релизов отвечает за построение и создание дистрибутивов релизов FreeBSD для различных поддерживаемых платформ.
+Пакеты сторонних разработчиков / вендоров в Коллекции портов управляются группой pkgmgr@. Кроме прочих обязанностей, ответственные за пакеты отвечают за бесперебойную работу кластера портов в процессе формирования бинарных пакетов.
 
-*Группа построения релизов(re-builders@FreeBSD.org)* : {re-builders}
-
-Пакеты сторонних производителей в Коллекции Портов управляются группой portmgr@. Кроме прочих обязанностей, ответственные за порты отвечают за гладкую работу кластера портов в процессе создания двоичных пакаджей.
-
-*Создатели пакаджей ({contact-portmgr})* : {portmgr-members}
+*Создатели пакетов(pkgmgr@FreeBSD.org)* : {pkgmgr-members}
 
 [[old]]
 == Старые релизы
 
-Проект FreeBSD не поддерживает централизованный исторический архив ISO образов старых релизов но большинство из них доступно по этому адресу: ftp://ftp-archive.FreeBSD.org/pub/FreeBSD-Archive/old-releases/.
+Проект FreeBSD не поддерживает централизованный исторический архив ISO образов старых релизов, но большинство из них доступно по адресу: http://ftp-archive.freebsd.org/pub/FreeBSD-Archive/old-releases/.
 
-Если вы не можете найти зеркало FTP, на котором всё ещё хранится искомый релиз, то можете написать поставщикам компакт-дисков, есть ли у них старые релизы.
+Если вы не можете найти зеркало FTP, на котором всё ещё хранится искомый релиз, то можете написать поставщикам компакт-дисков на предмет наличия у них старых релизов.
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (15.10.2025): 264e9b217477de9c4b0809296a51d11cbd347648
+//
