--- a/website/content/ru/releng/charter.adoc
+++ b/website/content/ru/releng/charter.adoc
@@ -1,18 +1,24 @@
 ---
 title: "Обязанности Группы подготовки релизов"
 sidenav: developers
---- 
+---
 
 = Обязанности Группы подготовки релизов
 
 Группа подготовки релизов отвечает за следующие вопросы:
 
 * Определение и публикация плана выпуска релизов для официальных релизов Проекта FreeBSD.
-* Документирование и формализация процесса подготовки релизов, так чтобы его можно было пересматривать и улучшать. В эту работу включается подготовка документации о кластере портов и процедурах разделения пакаджей.
-* Установка и публикация дат "заморозки кода", и выполнение роли комитета по просмотру изменений для решения вопроса о том, какие изменения можно вносить в ветку во момент заморозки кода. К этим вопросам относится заморозка ветки HEAD при подготовке релиза .0, а также традиционные заморозки кода `RELENG_*` при выпуске релизов -STABLE.
-* Создание и обслуживание веток `RELENG_*` дерева `src/`. Сюда относится принятие конечного решения о том, какие изменения делаются (и остаются) в ветке -STABLE до создания ветки, соответствующей релизу.
-* Работа с руководством проекта и/или Фондом FreeBSD для определения набора правил, которым должны следовать поставщики, если они хотят, чтобы их продукт назывался "FreeBSD" или "Официальным релизом FreeBSD".
-* Тестирование и интеграция необходимых пакаджей из коллекции портов на носители с официальными релизами. Portmgr@ отвечает за управление заморозкой кода в `ports/` и полноту построения пакаджей портов, которые можно распространять. re@ отвечает за размещение этих пакаджей на различных ISO, требуемых для носителей релизов. re@ безусловно отвечает за то, что все требуемые пакаджи размещаются на носителях с релизом FreeBSD, но без участия portmgr@ здесь не обойтись.
-* Координация с Проектом создания документации FreeBSD для обеспечения наличия полного набора документации к релизу. В круг вопросов входит запрет на внесение больших изменений в наборе документации в недели, предшествующие релизу.
-* Координация с командой начальника отдела информационной безопасности для обеспечения того, что релизы FreeBSD не будут подвержены недавно выявленным уязвимостям. Кроме того, примерно примерно через 1 неделю после релиза право на утверждение внесения изменений в ветках релизов (`RELENG_X_Y`) передаётся от релиз-инженеров службе безопасности. Конкретная дата передачи согласуется обоими сторонами, как только становится ясно, что релиз состоялся. В этот момент в адрес developers@ должно посылаться предупреждающее письмо.
+* Документирование и формализация процесса подготовки релизов, так чтобы его можно было пересматривать и улучшать. В эту работу входит подготовка документации о кластере портов и процедурах разделения пакетов.
+* Установка и публикация дат "заморозки кода", и выполнение роли комитета по рассмотрению изменений для решения вопроса о том, какие изменения можно вносить в ветку в момент заморозки кода. К этим вопросам относится заморозка ветки HEAD при подготовке релиза .0, а также традиционные заморозки кода `RELENG_*` при выпуске релизов -STABLE.
+* Создание и обслуживание веток `releng_*` дерева `src/`. Сюда относится принятие окончательного решения о том, какие изменения делаются (и остаются) в ветке -STABLE до создания ветки, соответствующей релизу.
+* Работа с руководством проекта и/или Фондом FreeBSD для определения набора правил, которым должны следовать вендоры, если они хотят, чтобы их продукт назывался "FreeBSD" или "Официальным релизом FreeBSD".
+* Тестирование и интеграция необходимых пакетов из коллекции портов на носители с официальными релизами. Portmgr@ отвечает за управление заморозкой кода в `ports/` и полноту построения пакетов для портов, которые можно распространять. re@ отвечает за размещение этих пакетов на различных ISO, требуемых для носителей релизов. re@, безусловно, отвечает за то, что все требуемые пакеты размещаются на носителях с релизом FreeBSD, но без участия portmgr@ здесь не обойтись.
+* Координация с Проектом документации FreeBSD для обеспечения наличия полного набора документации к релизу. В круг вопросов входит запрет на внесение больших изменений в наборе документации в недели, предшествующие релизу.
+* Координация с командой Директора по отдела информационной безопасности для обеспечения того, что релизы FreeBSD не будут подвержены недавно выявленным уязвимостям. Кроме того, примерно примерно через 1 неделю после релиза право на утверждение внесения изменений в ветках релизов (`releng/X.Y/`) передаётся от релиз-инженеров службе безопасности. Конкретная дата передачи согласуется обеими сторонами, как только становится ясно, что релиз состоялся. В этот момент в адрес developers@ должно посылаться предупреждающее письмо.
 * Посылка сообщений в адрес announce@FreeBSD.org от имени проекта для анонсирования новых релизов FreeBSD.
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (21.02.2021): eb4b89b8d31574df0a18fc5f7562181ccd6eecd6
+//
