--- a/website/content/en/status/report-2025-10-2025-12/hackathon-202507-berlin.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/hackathon-202507-berlin.adoc
@@ -11,7 +11,7 @@ The approximately 30 participants hacked on the the following projects:
   * [Local Chatbot RAG with FreeBSD Knowledge](https://pad.lorenz.lu/Hackathon202507#Local-Chatbot-RAG-with-FreeBSD-Knowledge)
   * [Cross compiling FreeBSD on macOS](https://pad.lorenz.lu/Hackathon202507#Cross-compiling-FreeBSD-on-macOS)
   * [Importing OpenSSL 3.5](https://pad.lorenz.lu/Hackathon202507#Pierre-P-khorben)
-  * [The netlinkification of PF)(https://pad.lorenz.lu/Hackathon202507#Kristof-P-kp)
+  * [The netlinkification of PF](https://pad.lorenz.lu/Hackathon202507#Kristof-P-kp)
   * [Injecting host executable into jails](https://pad.lorenz.lu/Hackathon202507#Jan-B)
   * [Updating OpenSearch ports](https://pad.lorenz.lu/Hackathon202507#Li-Wen-H-lwhsu)
   * [Ambushing Mark Phillips with a Microphone](https://pad.lorenz.lu/Hackathon202507#Benedict-R-bcr)
