--- a/website/content/en/status/report-2025-07-2025-09/ACPI.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/ACPI.adoc
@@ -1,7 +1,7 @@
 === ACPI Lua Bindings
 
 Links: +
-link:https://www.github.com/kpowkitty/freebsd-src[Github] URL: link:https://www.github.com/kpowkitty/freebsd-src[] +
+link:https://www.github.com/kpowkitty/freebsd-src[GitHub] URL: link:https://www.github.com/kpowkitty/freebsd-src[] +
 link:https://www.github.com/freebsd/freebsd-src/pull/1740[PR: libsa: Add isprint()] URL: link:https://www.github.com/freebsd/freebsd-src/pull/1740[] +
 link:https://www.github.com/freebsd/freebsd-src/pull/1843[PR: loader: Move ACPI RSDP detection] URL: link:https://www.github.com/freebsd/freebsd-src/pull/1843[] +
 link:https://www.github.com/freebsd/freebsd-src/pull/1818[PR: efi: Create libacpi] URL: link:https://www.github.com/freebsd/freebsd-src/pull/1818[] +
