--- a/website/content/en/status/report-2025-07-2025-09/foundation-sta.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/foundation-sta.adoc
@@ -26,7 +26,7 @@ The Foundation will continue to check in with the Source Management team regular
 
 The scope was co-created with srcmgr@. Work items are as follows:
 
-* Create a dashboard for the Source Management team to get a clearer picture of the bug backlog, and how effectively it's being managed (e.g. Time to First Attention for new bugs).
+* Create a dashboard for the Source Management team to get a clearer picture of the bug backlog, and how effectively it is being managed (e.g. Time to First Attention for new bugs).
 ** Output:  https://grimoire.freebsd.org/
 * Upgrade Bugzilla to a supported release to improve security and benefit from new functionality.
 ** Output: https://wiki.freebsd.org/Bugzilla/Roadmap
