--- a/website/content/en/status/report-2025-07-2025-09/hackathon.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/hackathon.adoc
@@ -9,7 +9,7 @@ Location: Chaos Computer Club Berlin
 We had been invited to hold our two day Hackathon in the halls of the Chaos Computer Club Berlin.
 The full report can be found link:https://pad.lorenz.lu/Hackathon202507[here].
 
-The approximately 30 participants hacked on the the following projects:
+The approximately 30 participants hacked on the following projects:
 
 * link:https://pad.lorenz.lu/Hackathon202507#Local-Chatbot-RAG-with-FreeBSD-Knowledge[Local Chatbot RAG with FreeBSD Knowledge]
 * link:https://pad.lorenz.lu/Hackathon202507#Cross-compiling-FreeBSD-on-macOS[Cross compiling FreeBSD on macOS]
