--- a/website/content/en/status/report-2025-07-2025-09/kde.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/kde.adoc
@@ -10,7 +10,8 @@ The KDE on FreeBSD project packages CMake, Qt, and software from the KDE Communi
 The software includes a full desktop environment called KDE Plasma (for both X11 and Wayland) and hundreds of applications that can be used on any FreeBSD machine.
 The mailto:kde@FreeBSD.org[KDE team] is part of mailto:desktop@FreeBSD.org[desktop@], building the software stack to make FreeBSD beautiful and usable as a daily driver graphical desktop workstation.
 
-We missed last quarterly status report. The changes from the second quarter are included in this report.
+We missed last quarterly status report.
+The changes from the second quarter are included in this report.
 
 ==== Infrastructure
 
@@ -31,7 +32,8 @@ This might be the last update for Qt5 on FreeBSD.
 
 The package:www/qt5-webengine[] port has been updated to 5.15.19 with security patches up to Chromium 135.0.7049.95.
 The Qt5 WebEngine component, however, is and forever will be based on Chromium 87.0.4280.144, which is over 4 years old.
-Security updates for the underlying Chromium base have now ceased. Use at your own risk.
+Security updates for the underlying Chromium base have now ceased.
+Use at your own risk.
 
 ==== KDE Stack
 
