--- a/website/content/en/status/report-2025-07-2025-09/sylve.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/sylve.adoc
@@ -8,7 +8,8 @@ link:https://discord.gg/bJB826JvXK[Discord] URL: link:https://discord.gg/bJB826J
 Contact: Hayzam Sherif <hayzam@alchemilla.io>
 
 Sylve is a modern, unified system management platform for FreeBSD, inspired by Proxmox.
-We aim to provide an integrated web interface for managing virtual machines (via Bhyve), Jails, ZFS storage, networking, and firewalling. The backend is implemented in Go, while the frontend uses SvelteKit with Tailwind CSS and ShadCN UI components.
+We aim to provide an integrated web interface for managing virtual machines (via Bhyve), Jails, ZFS storage, networking, and firewalling.
+The backend is implemented in Go, while the frontend uses SvelteKit with Tailwind CSS and ShadCN UI components.
 
 The project emphasizes a minimal system footprint, currently requiring only package:sysutils/smartmontools[], package:sysutils/tmux[], package:libvirt[], package:samba419[], package:swtpm[] as runtime dependencies.
 
