--- a/website/content/en/status/report-2025-07-2025-09/appjail.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/appjail.adoc
@@ -1,9 +1,9 @@
 === Container orchestration: Overlord, Director, AppJail and cloud-init
 
 Links: +
-link:https://github.com/DtxdF/AppJail[AppJail on Github] URL: link:https://github.com/DtxdF/AppJail[] +
-link:https://github.com/DtxdF/Director[Director on Github] URL: link:https://github.com/DtxdF/Director[] +
-link:https://github.com/DtxdF/Overlord[Overlord on Github] URL: link:https://github.com/DtxdF/Overlord[] +
+link:https://github.com/DtxdF/AppJail[AppJail on GitHub] URL: link:https://github.com/DtxdF/AppJail[] +
+link:https://github.com/DtxdF/Director[Director on GitHub] URL: link:https://github.com/DtxdF/Director[] +
+link:https://github.com/DtxdF/Overlord[Overlord on GitHub] URL: link:https://github.com/DtxdF/Overlord[] +
 link:https://github.com/AppJail-makejails[Makejails] URL: link:https://github.com/AppJail-makejails[]
 
 Contact: Jesús Daniel Colmenares Oviedo <dtxdf@FreeBSD.org>
