new committer (src): John Hall (jrhall)
Complete steps 1-4 for new committers from the committer's guide:

1. Add myself to doc/shared/authors.adoc
2. Add myself to doc/shared/contrib-committers.adoc
3. Add a news entry
4. Add my PGP key

Reviewed By:	imp (mentor)
Approved by:	imp (mentor)
Differential Revision: https://reviews.freebsd.org/D53933

--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -1751,6 +1751,10 @@
 :jraynard-email: jraynard@FreeBSD.org
 :jraynard: {jraynard-name} <{jraynard-email}>
 
+:jrhall-name: John Hall
+:jrhall-email: jrhall@FreeBSD.org
+:jrhall: {jrhall-name} <{jrhall-email}>
+
 :jrm-name: Joseph Mingrone
 :jrm-email: jrm@FreeBSD.org
 :jrm: {jrm-name} <{jrm-email}>
