--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -414,22 +414,39 @@ gitref:7b9a772f9f64[repository=src]
 An option has been added to change the directory in man:env[1] which closely resembles the feature in the GNU version of env, although it does not support long options.
 gitref:08e8554c4a39[repository=src] (Sponsored by Klara, Inc.)
 
-Fix `-U` flag of man:ps[1] to select processes by real user IDs.
-This is what POSIX mandates for option `-U` and arguably the behavior that most users actually need in most cases.
-Before, `-U` would select processes by their effective user IDs (which is the behavior mandated by POSIX for option `-u`).
-gitref:a2132d91739d[repository=src].
-(Sponsored by The FreeBSD Foundation).
+man:ps[1]: Automatically remove canned displays' columns that contain same data as those of some explicitly-requested columns.
+Before this change, if some user requested to add some "canned display" (options `-j`, `-l`, `-u` or `-v`), columns in it that were duplicates of explicitly-requested ones earlier on the command line were omitted, but this did not work the other way around, when a canned display appears before explicitly-requested columns.
+Additionally, columns with different keywords but which are aliases to the same
+keyword are now also considered holding the same data, in addition to columns having the same keyword.
+gitref:cd768a840644[repository=src]
+(Sponsored by The FreeBSD Foundation.)
 
-Make '-O' more versatile and predictable for man:ps[1].
+man:ps[1]: Make `-O` more versatile and predictable.
 The man:ps[1] display's list of columns is now first built without taking into account the `-O` options.
 In a second step, all columns passed via `-O` are finally inserted after the built-so-far display's first PID column (if it exists, else at start), in their order of appearance as arguments to the `-O` options.
-gitref:1fc8cb547cd4[repository=src].
-(Sponsored by The FreeBSD Foundation).
+gitref:5dad61d9b949[repository=src]
+(Sponsored by The FreeBSD Foundation.)
 
-Remove not-explicitly-requested columns with duplicate data in man:ps[1].
-Before this change, when stacking up more columns in the display through command-line options, if user requested to add some "canned" display (through options `-j`, `-l`, `-u` or `-v`), columns in it that were "duplicates" of already requested ones (meaning that they share the same keyword, regardless of whether their headers have been customized) were in the end omitted.
-gitref:7aa2f4826717[repository=src].
-(Sponsored by The FreeBSD Foundation).
+man:ps[1]: Make `-a` and `-A` always show all processes.
+When combined with other options affecting the selection of processes, except for `-X` and `-x`, option `-a` would have no effect (and `-A` would reduce to just `-x`).
+This was in contradiction with the rule applying to all other selection options stating that one process is listed as soon as any of these options has been specified and selects it, which is both mandated by POSIX and arguably a natural expectation.
+As a practical consequence, specifying `-a` or `-A` now causes all processes to be listed regardless of other selection options such as `-U`, `-p`, `-G`, etc., except for the `-X` and `-x` filter options, which continue to apply.
+In particular, to list only processes from specific jails, one must not use `-a` with `-J`.
+Option `-J`, contrary to its apparent initial intent, never worked as a filter in practice, except by accident with only `-a` due to the bug.
+gitref:93a94ce731a8[repository=src]
+(Sponsored by The FreeBSD Foundation.)
+
+man:ps[1]: Match current user's processes using the effective user ID.
+Previously, we would match using the real user ID.
+This puts man:ps[1] in conformance with POSIX on that topic.
+gitref:1aabbb25c9f9c4372[repository=src]
+(Sponsored by The FreeBSD Foundation.)
+
+man:ps[1]: Fix `-U` flag to select processes by real user IDs.
+This is what POSIX mandates for option `-U` and arguably the behavior that most users actually need in most cases.
+Before, `-U` would select processes by their effective user IDs (which is the behavior mandated by POSIX for option `-u`).
+gitref:995b690d1398[repository=src]
+(Sponsored by The FreeBSD Foundation.)
 
 Add flags to filter jail prison and vnet variables in man:sysctl[8] output.
 So users do not have to contact the source code to tell whether a variable is a jail prison / vnet one or not.
@@ -986,23 +1003,12 @@ gitref:39f92a4c4c49[repository=src]
 Refer to man:graid[8] and man:zfs[8] instead of man:gvinum[8] in man:ccdconfig[8]).
 (gitref:55cb3a33d920[repository=src]).
 
-man:ps[1]: Document change in behavior for `-a`/`-A`.
-Document the practical consequence of change gitref:93a94ce731a8[repository=src] that specifying `-a`/`-A` leads to printing all processes regardless of the presence of other process selection options (except for `-x`/`-X`, which command a filter).
-gitref:eed005b57895[repository=src].
-(Sponsored by The FreeBSD Foundation).
-
-man:ps[1]: Change in behavior for option `-U`.
-gitref:4e4739dd0745[repository=src]
-(Sponsored by The FreeBSD Foundation).
-
-man:ps[1]: Change of how current user's processes are matched.
-gitref:7219648f60d1[repository=src].
-(Sponsored by The FreeBSD Foundation).
-
-man:ps[1]: Match current user's processes using effective UID.
-This puts man:ps[1] of FreeBSD in conformance with POSIX.
-gitref:1e8dc267ca91[repository=src].
-(Sponsored by The FreeBSD Foundation).
+man:ps[1]: Revamp: Explain general principles, update to match reality.
+The preamble has been revamped to give a thorough overview of the different aspects of the man:ps[1] command.
+The description of several options and some keywords have been fixed to match their actual behavior or expanded.
+The STANDARDS and BUGS sections have been expanded.
+gitref:ddf144a04b53[repository=src]
+(Sponsored by The FreeBSD Foundation.)
 
 man:mac_do[4]: Change of rules syntax; Provide hints and pointers.
 gitref:0c3357dfa18f[repository=src].
