--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -788,6 +788,12 @@ A new cellular modem driver supports USB network devices implementing the Mobile
 The accompanying man:umbctl[8] tool is used to display or set MBIM cellular modem interface parameters (4G/LTE).
 gitref:0f1bf1c22a0c[repository=src] (Sponsored by The FreeBSD Foundation)
 
+man:smbios[4]: Search for the SMBIOS v3 (64-bit) entry point first also on BIOS boot.
+This allows to detect and report the proper SMBIOS version with BIOSes that only provide the v3 table, as happens on Hetzner virtual machines.
+For machines that provide both, leverage the v3 table in priority consistently with the EFI case.
+gitref:bc7f6508363c[repository=src]
+(Sponsored by The FreeBSD Foundation.)
+
 [[drivers-removals]]
 === Deprecated and Removed Drivers
 
@@ -871,30 +877,24 @@ The BIOS boot loader added back support for gzip and bzip2, but removed support 
 (The EFI boot loader is unchanged with support for all of those.)
 gitref:4d3b05a8530e[repository=src] (Sponsored by Netflix)
 
-man:loader.efi[8]: Favor the v3 (64-bit) entry point in man:smbios[4].
-Be consistent with what is done with non-EFI boot (but with the difference that EFI runs in 64-bit mode on 64-bit platforms, so there is no restriction that the v3 entry point should be below 4GB).
-gitref:807d51be8040[repository=src].
-(Sponsored by The FreeBSD Foundation).
+The BIOS boot loader will now use the SMBIOS v3 (64-bit) entry point if its table is below 4GB.
+The BIOS boot loader is compiled 32-bit as a client of BTX even on amd64, so cannot access addresses beyond 4GB.
+However, the 64-bit entry point may refer to a structure table below 4GB, which can be used if the BIOS does not provide a 32-bit entry point, as happens on Hetzner virtual machines.
+gitref:7f005c6699f4[repository=src]
+(Sponsored by The FreeBSD Foundation.)
 
-man:libsa[3]: Favor the v3 (64-bit) entry point on non-EFI boot in man:smbios[4].
-When both the 32-bit and 64-bit entry points are present, the SMBIOS specification says that the 64-bit entry point always has at least all the structures the 32-bit entry point refers.
+The BIOS boot loader now favors the SMBIOS v3 (64-bit) entry point.
+When both the 32-bit and 64-bit entry points are present, the SMBIOS specification says that the 64-bit entry point always has at least all the structures the 32-bit entry point refers to.
 In other words, the 32-bit entry point is provided for compatibility, so it is assumed the 64-bit one has more chances to be filled with adequate values.
-gitref:93af0db0d529[repository=src]
-(Sponsored by The FreeBSD Foundation).
+gitref:3f744fb8b2c5[repository=src]
+(Sponsored by The FreeBSD Foundation.)
 
-man:libsa[3]: Use 64-bit entry point if table below 4GB on non-EFI boot in man:smbios[4].
-On amd64, boot blocks and the non-EFI loader are 32-bit compiled as clients of BTX, so cannot access addresses beyond 4GB.
-However, the 64-bit entry point may refer to a structure table below 4GB, which can be used if the BIOS does not provide a 32-bit entry point.
-The situation is similar for powerpc64.
-gitref:7b0350b376c0[repository=src].
-(Sponsored by The FreeBSD Foundation).
+The EFI boot loader now favors the SMBIOS v3 (64-bit) entry point.
+Consistently with what is done with BIOS boot.
+There is a difference though: As the EFI loader runs in 64-bit mode on 64-bit platforms, there is no restriction that the v3 entry point's structure table should be below 4GB.
+gitref:96f77576e9ea[repository=src]
+(Sponsored by The FreeBSD Foundation.)
 
-Search for v3 (64-bit) entry point first on BIOS boot in man:smbios[4].
-When booted from BIOS (i.e., not EFI), also search for a 64-bit version of the SMBIOS Entry Point.
-This allows to detect and report the proper SMBIOS version with BIOSes that only provide the v3 table, as happens on Hetzner virtual machines.
-For machines that provide both, leverage the v3 table in priority consistently with the EFI case.
-gitref:145ef4af15f0[repository=src].
-(Sponsored by The FreeBSD Foundation).
 [[network]]
 == Networking
 
