--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -414,20 +414,20 @@ gitref:7b9a772f9f64[repository=src]
 An option has been added to change the directory in man:env[1] which closely resembles the feature in the GNU version of env, although it does not support long options.
 gitref:08e8554c4a39[repository=src] (Sponsored by Klara, Inc.)
 
-man:ps[1]: Automatically remove canned displays' columns that contain same data as those of some explicitly-requested columns.
+man:ps[1] now automatically removes canned displays' columns that contain same data as some explicitly-requested columns.
 Before this change, if some user requested to add some "canned display" (options `-j`, `-l`, `-u` or `-v`), columns in it that were duplicates of explicitly-requested ones earlier on the command line were omitted, but this did not work the other way around, when a canned display appears before explicitly-requested columns.
 Additionally, columns with different keywords but which are aliases to the same
 keyword are now also considered holding the same data, in addition to columns having the same keyword.
 gitref:cd768a840644[repository=src]
 (Sponsored by The FreeBSD Foundation.)
 
-man:ps[1]: Make `-O` more versatile and predictable.
+man:ps[1]'s `-O` option is now more versatile and predictable.
 The man:ps[1] display's list of columns is now first built without taking into account the `-O` options.
 In a second step, all columns passed via `-O` are finally inserted after the built-so-far display's first PID column (if it exists, else at start), in their order of appearance as arguments to the `-O` options.
 gitref:5dad61d9b949[repository=src]
 (Sponsored by The FreeBSD Foundation.)
 
-man:ps[1]: Make `-a` and `-A` always show all processes.
+man:ps[1]'s `-a` and `-A` options now always show all processes.
 When combined with other options affecting the selection of processes, except for `-X` and `-x`, option `-a` would have no effect (and `-A` would reduce to just `-x`).
 This was in contradiction with the rule applying to all other selection options stating that one process is listed as soon as any of these options has been specified and selects it, which is both mandated by POSIX and arguably a natural expectation.
 As a practical consequence, specifying `-a` or `-A` now causes all processes to be listed regardless of other selection options such as `-U`, `-p`, `-G`, etc., except for the `-X` and `-x` filter options, which continue to apply.
@@ -436,13 +436,13 @@ Option `-J`, contrary to its apparent initial intent, never worked as a filter i
 gitref:93a94ce731a8[repository=src]
 (Sponsored by The FreeBSD Foundation.)
 
-man:ps[1]: Match current user's processes using the effective user ID.
+man:ps[1] now matches current user's processes using the effective user ID.
 Previously, we would match using the real user ID.
 This puts man:ps[1] in conformance with POSIX on that topic.
 gitref:1aabbb25c9f9c4372[repository=src]
 (Sponsored by The FreeBSD Foundation.)
 
-man:ps[1]: Fix `-U` flag to select processes by real user IDs.
+man:ps[1]'s `-U` flag now selects processes by real user IDs.
 This is what POSIX mandates for option `-U` and arguably the behavior that most users actually need in most cases.
 Before, `-U` would select processes by their effective user IDs (which is the behavior mandated by POSIX for option `-u`).
 gitref:995b690d1398[repository=src]
@@ -1003,9 +1003,9 @@ gitref:39f92a4c4c49[repository=src]
 Refer to man:graid[8] and man:zfs[8] instead of man:gvinum[8] in man:ccdconfig[8]).
 (gitref:55cb3a33d920[repository=src]).
 
-man:ps[1]: Revamp: Explain general principles, update to match reality.
+The man:ps[1] manual page has been revamped to explain the general principles, and descriptions in there have been updated to match reality.
 The preamble has been revamped to give a thorough overview of the different aspects of the man:ps[1] command.
-The description of several options and some keywords have been fixed to match their actual behavior or expanded.
+The description of several options and some keywords have been fixed to match their actual behavior and/or expanded.
 The STANDARDS and BUGS sections have been expanded.
 gitref:ddf144a04b53[repository=src]
 (Sponsored by The FreeBSD Foundation.)
