--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -788,7 +788,7 @@ A new cellular modem driver supports USB network devices implementing the Mobile
 The accompanying man:umbctl[8] tool is used to display or set MBIM cellular modem interface parameters (4G/LTE).
 gitref:0f1bf1c22a0c[repository=src] (Sponsored by The FreeBSD Foundation)
 
-man:smbios[4]: Search for the SMBIOS v3 (64-bit) entry point first also on BIOS boot.
+man:smbios[4] now searches for the SMBIOS v3 (64-bit) entry point first also if booted from BIOS.
 This allows to detect and report the proper SMBIOS version with BIOSes that only provide the v3 table, as happens on Hetzner virtual machines.
 For machines that provide both, leverage the v3 table in priority consistently with the EFI case.
 gitref:bc7f6508363c[repository=src]
