--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -456,6 +456,13 @@ man:grep[1] no longer follows symbolic links by default for recursive searches.
 This matches the documented behavior in the manual page.
 gitref:3a2ec5957ea9[repository=src]
 
+man:mdo[1] now supports fully specifying all users and groups in the target credentials.
+As a convenience, in addition to a full explicit specification, it allows starting from a baseline providing default values for all attributes, which is either the login credentials from some user in the password database or the current credentials, and then amending these attributes selectively.
+The manual page has been updated to describe the new options and their interactions.
+gitref:4ffcb1a4a99c[repository=src]
+(Sponsored by The FreeBSD Foundation.)
+(Sponsored by Google LLC (GSoC 2025).)
+
 [[userland-contrib]]
 === Contributed Software
 
@@ -1009,6 +1016,12 @@ The description of several options and some keywords have been fixed to match th
 The STANDARDS and BUGS sections have been expanded.
 gitref:ddf144a04b53[repository=src]
 (Sponsored by The FreeBSD Foundation.)
+
+The existing content of the man:mdo[1] manual page has been enriched as part of documenting the new support for fully specifying all users and groups in the target credentials.
+It has now a longer introduction and a new SECURITY CONSIDERATIONS section.
+gitref:20ebb6ec5ac0[repository=src]
+(Sponsored by The FreeBSD Foundation.)
+(Sponsored by Google LLC (GSoC 2025).)
 
 man:mac_do[4]: Change of rules syntax; Provide hints and pointers.
 gitref:0c3357dfa18f[repository=src].
