--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -617,10 +617,12 @@ Support legacy PCI hotplug on arm64.
 gitref:355f02cddbf0[repository=src].
 (Sponsored by Arm Ltd).
 
-Define a common 'mac' node for MAC's jail parameters for man:mac[3].
+A new common 'mac' node for MAC modules' jail parameters has been created.
+All future MAC modules' jail parameters will appear under this node.
+See man:mac[4] for an introduction to MAC.
 To be used by man:mac_do[4].
-gitref:66fb52a27279[repository=src].
-(Sponsored by The FreeBSD Foundation).
+gitref:5041b20503db[repository=src]
+(Sponsored by The FreeBSD Foundation.)
 
 New `setcred()` system call and associated MAC hooks.
 This new system call allows to set all necessary credentials of a process in one go: Effective, real and saved UIDs, effective, real and saved GIDs, supplementary groups and the MAC label.
